# XTCLab2

./: .gitignore  CMakeLists.txt
Source/: Main.cpp
